[tool.poetry]
name = "aio-py-rq"
version = "2.0.1"
description = ""
authors = ["Heureka <vyvoj@heureka.cz>"]
packages = [
	{ include="aiopyrq" }
]

[tool.poetry.dependencies]
python = "^3.7"
aioredis = {version = "^1.2"}

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-asyncio = "^0.10"
asynctest = "^0.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
