[tool.poetry]
name = "aio-py-rq"
version = "4.1.0"
description = ""
authors = ["Heureka <vyvoj@heureka.cz>"]
packages = [
	{ include="aiopyrq" }
]

[tool.poetry.dependencies]
python = "^3.7"
redis = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.18"
asynctest = "^0.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
